<?xml version="1.0"?>
<package format="3">
  <name>jdcobot_100_description</name>
  <version>1.0.0</version>
  <description>URDF Description package for jdcobot_100_description</description>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
